objects/JBCXM__SponsorTracking__c.object
<CustomObject>
    <description>This will be the junction object between SFDC and NewStack for transferring data related to contacts.</description>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>STAccount</relationshipLabel>
        <relationshipName>STAccount</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__ChangedInfo__c</fullName>
        <label>ChangedInfo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>STContact</relationshipLabel>
        <relationshipName>STContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CustomerInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Info</label>
        <referenceTo>JBCXM__CustomerInfo__c</referenceTo>
        <relationshipLabel>STCustomer</relationshipLabel>
        <relationshipName>STCustomer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsChanged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsRelationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRelationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastChangeDetails__c</fullName>
        <label>LastChangeDetails</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastChangeModifiedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LastChangeModifiedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SponsorTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__LastChangeModifiedDate__c</fullName>
        <label>LastChangeModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__LinkedInUrl__c</fullName>
        <label>LinkedInUrl</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__PhotoUrl__c</fullName>
        <label>PhotoUrl</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RelationshipContact</label>
        <referenceTo>JBCXM__GSRelationshipContacts__c</referenceTo>
        <relationshipLabel>SponsorTracking</relationshipLabel>
        <relationshipName>SponsorTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GSRelationship</label>
        <referenceTo>JBCXM__GSRelationship__c</referenceTo>
        <relationshipLabel>SponsorTracking</relationshipLabel>
        <relationshipName>SponsorTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SocialProfile__c</fullName>
        <label>SocialProfile</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__SponsorFullName__c</fullName>
        <label>SponsorFullName</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SponsorTracking</label>
    <nameField>
        <label>Sponsor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SponsorTracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>